Updating contact info

--- a/data/markdowns/gitbook/ssp.yaml
+++ b/data/markdowns/gitbook/ssp.yaml
@@ -30,7 +30,7 @@ information_system:
     title: 18F Infrastructure Director
     organization: 18F/GSA
     phone_number: 202-577-7167
-    email: noah.kunin@gsa.gov
+    email: noah.kunin [at] gsa.gov
     street_address: 1800 F Street, NW
     city: Washington
     state: DC
@@ -39,7 +39,7 @@ information_system:
     name: Aaron Snow
     title: Authorizing Official
     organization: 18F/GSA
-    email: aaron.snow@gsa.gov
+    email: aaron.snow [at] gsa.gov
     street_address: 1800 F Street, NW
     city: Washington
     state: DC
