--- a/data/components/18F/AU-Policy/component.yaml
+++ b/data/components/18F/AU-Policy/component.yaml
@@ -226,3 +226,8 @@ satisfies:
     '
   standard_key: NIST-800-53
 schema_version: 2.0
+verifications:
+- key: POLICY_DOC
+  name: Policy Document
+  path: https://github.com/18F/compliance-docs/blob/master/AU-Policy.md
+  type: URL
