--- a/data/components/18F/CA-Policy/component.yaml
+++ b/data/components/18F/CA-Policy/component.yaml
@@ -4,7 +4,8 @@ satisfies:
 - control_key: CA-7
   covered_by: []
   implementation_status: none
-  narrative: ''
+  narrative: |
+    In progress
   standard_key: NIST-800-53
 - control_key: CA-8 (1)
   covered_by:
@@ -231,3 +232,8 @@ satisfies:
       '
   standard_key: NIST-800-53
 schema_version: 2.0
+verifications:
+- key: POLICY_DOC
+  name: Policy Document
+  path: https://github.com/18F/compliance-docs/blob/master/CA-Policy.md
+  type: URL
