Updating components with test results

--- a/data/components/CloudFoundry/CloudController/component.yaml
+++ b/data/components/CloudFoundry/CloudController/component.yaml
@@ -144,3 +144,23 @@ verifications:
   name: Cloud Controller Role Documentation
   path: https://ocs.cloudfoundry.org/concepts/roles.html
   type: URL
+- filename: CloudController.feature
+  last_run: 2016-02-22 17:40:04.577803
+  name: User_Role_Tests
+  steps: "GIVEN I am using <account> account WHEN I try to create an org THEN the\
+    \ org <status> \nGIVEN I am using <account> account WHEN I try to update an org\
+    \ name THEN the org name <status> \nGIVEN I am using <account> account WHEN I\
+    \ try to delete an org THEN the org <status> \nGIVEN I am using <account> account\
+    \ WHEN I try to create a space THEN the space <status> \nGIVEN I am using <account>\
+    \ account WHEN I try to update a space name THEN the space name <status> \nGIVEN\
+    \ I am using <account> account WHEN I try to delete a space THEN the space <status>\
+    \ \nGIVEN I am using <account> account WHEN I try to create an app THEN the app\
+    \ <status> \nGIVEN I am using <account> account WHEN I try to delete an app THEN\
+    \ the app <status> \nGIVEN I am using <account> account WHEN I try to create a\
+    \ user THEN the user <status> \nGIVEN I am using <account> account WHEN I try\
+    \ to give a user access to a \"<workspace>\" THEN the user <status> \nGIVEN I\
+    \ am using <account> account WHEN I try to delete a user THEN the user <status>\
+    \ \nGIVEN I am using <account> account WHEN I view my audit logs THEN I find \"\
+    <number>\" events \n"
+  test_passed: true
+  type: TEST
