--- a/data/components/CloudFoundry/ApplicationSecurityGroups/component.yaml
+++ b/data/components/CloudFoundry/ApplicationSecurityGroups/component.yaml
@@ -64,3 +64,14 @@ satisfies:
     '
   standard_key: NIST-800-53
 schema_version: 2.0
+verifications:
+- filename: ASG.feature
+  last_run: 2016-02-22 17:39:33.618805
+  name: Security_Group_Tests
+  steps: "GIVEN I am using an admin account THEN I can view and print all the ASGs\
+    \ \nGIVEN I am using an admin account WHEN I try to bind the application security\
+    \ group with closed settings to the space THEN the security group is bound \n\
+    GIVEN I am using an admin account WHEN I try to bind the application security\
+    \ group with open settings to the space THEN the security group is bound \n"
+  test_passed: true
+  type: TEST
