Updating data tags

--- a/data/components/18F/AT-Policy/component.yaml
+++ b/data/components/18F/AT-Policy/component.yaml
@@ -56,3 +56,10 @@ verifications:
   name: Policy Document
   path: https://github.com/18F/compliance-docs/blob/master/AT-Policy.md
   type: URL
+- filename: policies.feature
+  last_run: 2016-02-23 10:57:33.867582
+  name: Policy_Update_Test
+  steps: "GIVEN the github link - <policy> THEN the policy has been updated within\
+    \ the last 180 days \n"
+  test_passed: false
+  type: TEST
