--- a/data/components/18F/MP-Policy/component.yaml
+++ b/data/components/18F/MP-Policy/component.yaml
@@ -13,3 +13,10 @@ verifications:
   name: Policy Document
   path: https://github.com/18F/compliance-docs/blob/master/MP-Policy.md
   type: URL
+- filename: policies.feature
+  last_run: 2016-02-23 10:57:34.103993
+  name: Policy_Update_Test
+  steps: "GIVEN the github link - <policy> THEN the policy has been updated within\
+    \ the last 180 days \n"
+  test_passed: false
+  type: TEST
