--- a/data/components/18F/AU-Policy/component.yaml
+++ b/data/components/18F/AU-Policy/component.yaml
@@ -231,3 +231,10 @@ verifications:
   name: Policy Document
   path: https://github.com/18F/compliance-docs/blob/master/AU-Policy.md
   type: URL
+- filename: policies.feature
+  last_run: 2016-02-23 10:57:33.887782
+  name: Policy_Update_Test
+  steps: "GIVEN the github link - <policy> THEN the policy has been updated within\
+    \ the last 180 days \n"
+  test_passed: false
+  type: TEST
