--- a/data/components/18F/CP-Policy/component.yaml
+++ b/data/components/18F/CP-Policy/component.yaml
@@ -12,3 +12,11 @@ satisfies:
   standard_key: NIST-800-53
 schema_version: 2.0
 system: 18F
+verifications:
+- filename: policies.feature
+  last_run: 2016-02-23 10:57:34.057832
+  name: Policy_Update_Test
+  steps: "GIVEN the github link - <policy> THEN the policy has been updated within\
+    \ the last 180 days \n"
+  test_passed: false
+  type: TEST
