--- a/data/components/18F/RA-Policy/component.yaml
+++ b/data/components/18F/RA-Policy/component.yaml
@@ -49,3 +49,10 @@ verifications:
   name: policy document
   path: https://github.com/18f/compliance-docs/blob/master/RA-policy.md
   type: url
+- filename: policies.feature
+  last_run: 2016-02-23 10:57:34.148886
+  name: Policy_Update_Test
+  steps: "GIVEN the github link - <policy> THEN the policy has been updated within\
+    \ the last 180 days \n"
+  test_passed: false
+  type: TEST
