--- a/data/components/CloudFoundry/UAA/component.yaml
+++ b/data/components/CloudFoundry/UAA/component.yaml
@@ -332,7 +332,8 @@ verifications:
   path: https://login.cloud.gov/login
   type: URL
 - filename: UAA.feature
-  last_run: 2016-02-23 10:37:48.705594
+  key: Account_Lockout_Tests
+  last_run: 2016-02-23 11:39:05.784118
   name: Account_Lockout_Tests
   steps: "GIVEN I am a user that can login WHEN I attempt to login 3 times and fail\
     \ THEN I am not locked out \nGIVEN I am a user that can login WHEN I attempt to\
