--- a/data/components/CloudFoundry/CloudController/component.yaml
+++ b/data/components/CloudFoundry/CloudController/component.yaml
@@ -146,15 +146,24 @@ verifications:
   type: URL
 - filename: CloudController.feature
   key: Audit_Log_Tests
-  last_run: 2016-02-23 11:39:02.513968
+  last_run: 2016-02-23 15:13:32.594868
   name: Audit_Log_Tests
   steps: 'GIVEN I am using a space auditor account WHEN I view my audit logs THEN
     I find "27" events '
   test_passed: true
   type: TEST
 - filename: CloudController.feature
+  key: Log_Content_Test
+  last_run: 2016-02-23 15:13:32.696831
+  name: Log_Content_Test
+  steps: 'GIVEN I am using an admin account WHEN I look at the audit logs THEN audit
+    logs have timestamp THEN audit logs have type of event THEN audit logs have actor
+    THEN audit logs have actee '
+  test_passed: true
+  type: TEST
+- filename: CloudController.feature
   key: User_Role_Tests
-  last_run: 2016-02-23 11:39:03.385721
+  last_run: 2016-02-23 15:13:34.083114
   name: User_Role_Tests
   steps: "GIVEN I am using <account> account WHEN I try to create an org THEN the\
     \ org <status> \nGIVEN I am using <account> account WHEN I try to update an org\
@@ -170,6 +179,8 @@ verifications:
     \ to give a user access to a \"<workspace>\" THEN the user <status> \nGIVEN I\
     \ am using <account> account WHEN I try to delete a user THEN the user <status>\
     \ \nGIVEN I am using <account> account WHEN I view my audit logs THEN I find \"\
-    <number>\" events \n"
+    <number>\" events \nGIVEN I am using an admin account WHEN I look at the audit\
+    \ logs THEN audit logs have timestamp THEN audit logs have type of event THEN\
+    \ audit logs have actor THEN audit logs have actee \n"
   test_passed: true
   type: TEST
