--- a/data/components/18F/CP_Policy/component.yaml
+++ b/data/components/18F/CP_Policy/component.yaml
@@ -15,9 +15,9 @@ system: 18F
 verifications:
 - filename: policies.feature
   key: Policy_Update_Test
-  last_run: 2016-02-23 11:29:07.332610
+  last_run: 2016-02-23 15:10:30.654773
   name: Policy_Update_Test
   steps: "GIVEN the github link - <policy> THEN the policy has been updated within\
     \ the last 180 days \n"
-  test_passed: false
+  test_passed: true
   type: TEST
